--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
+title: Submissive sissy slut
+logo: /assets/img/logo.png
+description: Minimal is a theme for GitHub Pages.
+show_downloads: true
+google_analytics:
 theme: jekyll-theme-minimal
